AppNav z-index issue fixed

--- a/src/components/AppNavStyles.scss
+++ b/src/components/AppNavStyles.scss
@@ -20,7 +20,7 @@ nav {
 
 	&.mobile-hide {
 		right: -100%;
-		// display: none;
+		display: none;
 	}
 
 	&.mobile-show {
@@ -75,12 +75,12 @@ nav {
 		padding: 0;
 		position: fixed;
 		top: 0;
-		z-index: 999;
+		// z-index: 999;
 		height: 5vh;
 		width: 100%;
 		display: grid;
 		place-items: center;
-		// border-bottom: 1px solid $lightpink;
+		border-bottom: 1px solid $lightpink;
 		// box-shadow: 0px 2px 5px #191919;
 
 		&.mobile-hide {
